# github-pr-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: ci.yml
github_pr_mcp/: client.py  models.py  parser.py
tests/: conftest.py  test_client.py  test_models.py  test_monitor.py  test_parser.py
